<resources>
    <string name="app_name">ePiwo</string>
    <string name="wpiszhaslo">Haslo:</string>
    <string name="name">Nick:</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="zarejestrujsie">Zarejestruj się!</string>
    <string name="email">e-mail:</string>
    <string name="telefon">Numer telefonu:</string>
    <string name="dataurodzenia"> Data urodzenia:</string>
    <string name="title_activity_register">Register</string>
    <string name="powtorzhaslo">Powtórz Hasło:</string>
    <string name="niezgodnehasla">Podane hasła się nie zgadzają!</string>
    <string name="rejestracjafail">Nie udało się zarejestrować. Sprawdź podane dane</string>
    <string name="update">Zaktualizuj</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="destroy_user">Usuń Konto</string>
    <string name="channel_name">epiwochannel</string>
    <string name="new_meeting">Nowe Spotkanie?</string>
    <string name="channel_description">kanalpowiadomien</string>
    <string name="channel_id">epiwochannel</string>
    <string name="kicked_user_tag">(Usunięty)</string>
    <string name="kicked_user">Wyrzucony za drzwi!</string>
    <string name="place_hint">Miejsce Spotkania:</string>
    <string name="desc_hint">Opis Spotkania:</string>
    <string name="name_hint">Nazwa Spotkania:</string>
    <string name="meeting_name_hint_short">Nazwa: </string>
    <string name="meeting_desc_hint_short">Opis: </string>
    <string name="meeting_place_hint_short">Miejsce: </string>
    <string name="meeting_date_hint_short">Data: </string>
    <string name="meeting_date_hint_users">Także biorą udział:</string>
    <string name="leave_meeting">Opuść</string>
    <string name="destroy_meeting">Odwołaj</string>
    <string name="modify_meeting">Modyfikuj</string>
    <string name="chat_meeting">Czat</string>
    <string name="date_hint">Data spotkania YYYY-MM-DD-HH-MM-SS</string>
    <string name="create_meeting">Utwórz spotkanie!</string>
    <string name="my_meetings">Moje spotkania</string>
    <string name="menu_home">Spotkania</string>
    <string name="menu_settings">Ustawienia konta</string>
    <string name="host">Organizator</string>
    <string name="change_password_title">Zmiana hasła</string>
    <string name="change_password">Zmień hasło!</string>
    <string name="notification_on">Powiadomienia włączone</string>
    <string name="notification_off">Powiadomienia wyłączone</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="send">Wyślij</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_meetings">Meetings</string>
    <string name="title_activity_add_meeting">AddMeetingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="chat_prompt">Your message...</string>
    <string name="search">Szukaj spotkań</string>
    <string name="meeting_details">Szczegóły spotkania</string>
    <string name="logged_out">Wylogowano</string>
    <string name="you_are_logged_out">Już się wylogowałeś!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_has_been_changed">Hasło zostało zmienione</string>
    <string name="search_button">Szukaj!</string>
</resources>