<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mod"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_meetings"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/gear"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/sign_out"
            android:title="@string/menu_logout" />

    </group>
</menu>