<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/wpiszLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/wpiszHasloEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wpiszhaslo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/zalogujButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="loguj"
        android:text="@string/zaloguj" />

    <Button
        android:id="@+id/zacznijRejestracjeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="rejestruj"
        android:text="@string/zarejestrujsie" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="adminLoguj"
        android:text="loguj z admina" />


</LinearLayout>