<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.epiwo.front.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.epiwo.front.ui.chat.ChatFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.epiwo.front.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.epiwo.front.ui.logoutdestroy.LogoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.epiwo.front.ui.home.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" />

</navigation>